[package]
name = "ox_content_ast"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AST definitions for Ox Content Markdown parser"

[lints]
workspace = true

[dependencies]
ox_content_allocator = { workspace = true }
